--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles.css">
+    <title>DEV-3</title>
 </head>
-<body>
+<body class="main">
     
+<form class="form">
+    <input class="input" type="text" placeholder="text">   
+    <button class="btm" type="submit">Submit</button>
+    <textarea class="textarea" type="text"></textarea>
+</form>
+
+<script src="./JS/index.js"></script>
 </body>
 </html>
