change in part one

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <input class="input" type="text" placeholder="text">   
     <button class="btm" type="submit">Submit</button>
     <textarea class="textarea" type="text"></textarea>
+    <p class="p"></p>
 </form>
+
+
 
 <script src="./JS/index.js"></script>
 </body>
