--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>DEV-3</title>
 </head>
 <body class="main">
+
+    <style>
+        .transfer {
+            background-color: red;
+        }
+    </style>
     
 <form class="form">
     <input class="input" type="text" placeholder="text">   
